fix layout issues in testimonails:

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 :root{
     --primary-color: #27296D;
     --secondary-color: #5E63B6; 
-    --third-color: #F5C7F7;
+    --third-color: #A393EB;
+    --accent-color: #F5C7F7;
 }
 body{
     margin: 0, auto;
@@ -70,7 +71,7 @@ p.tagline{
 }
 
 .btn-primary {
-    background-color: var(--third-color) !important;
+    background-color: var(--accent-color) !important;
     color: rgb(0, 0, 0) !important;
     padding: 15px 30px;
     margin-top: 40px;
@@ -115,4 +116,9 @@ h2,h4 {
 
 h2{
     font-size: 40px !important;
+}
+
+.bg-custom {
+    background-color: var(--third-color) !important;
+    padding: 50px 0;
 }
